# 100_days_of_code

./: .gitignore  README.md  pyproject.toml
proj143_coffee/: README.md  app.py
proj143_coffee/src/: coffeemachine.py
proj151_coffeeOOP/: pretty_table.py  turtle_example.py
proj151_coffeeOOP/oop-coffee-machine-start/: main.py
proj158_quiz/quiz-game-start/: data.py  main.py  question_model.py  quiz_brain.py
proj166_turtle/: main.py  spot_painting.py
proj177_turtle_race/: main.py  race.py
proj184_snake1/: main.py  snake.py
proj190_snake2/: constants.py  food.py  main.py  scoreboard.py  snake.py
proj199_pong/: ball.py  constants.py  main.py  midline.py  paddle.py  scoreboard.py
proj203_frogger/: car_manager.py  constants.py  main.py  player.py  scoreboard.py
proj220_snake3/: main.py  scoreboard.py  snake.py
proj224_mail_merge/: main.py
proj227/: my_data.csv  squirrel_counts.csv
proj227_pandas/: main.py  main2.py  main3.py  main4.py
proj234_NATO/: first_example.py  hard_example.py
proj234_NATO/NATO/: main.py
proj246_tkinter/: challenge.py  example.py  example2.py  miles_to_km.py
proj256_pomodoro/: main.py
